src/objects/skuid__Feedback_Response__c.object
<CustomObject>
    <description>Dynamic questions that reference a specific Feedback record</description>
    <fields>
        <fullName>skuid__Answer_Number__c</fullName>
        <description>For analyzing responses to numeric question types.</description>
        <label>Answer Number</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>skuid__Answer_Text__c</fullName>
        <description>The full text answer to the question.</description>
        <label>Answer Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>skuid__Feedback__c</fullName>
        <description>The Feedback record this response is linked to.</description>
        <label>Feedback</label>
        <referenceTo>skuid__Feedback__c</referenceTo>
        <relationshipLabel>Feedback Responses</relationshipLabel>
        <relationshipName>Feedback_Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>skuid__Question_Text__c</fullName>
        <description>The question being asked of the user.</description>
        <label>Question Text</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>skuid__Question_Type__c</fullName>
        <label>Question Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Textarea</fullName>
                    <default>true</default>
                    <label>Textarea</label>
                </value>
                <value>
                    <fullName>Rating</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Feedback Response</label>
    <nameField>
        <displayFormat>UFR-{YY}{MM}{DD}{00000}</displayFormat>
        <label>Response Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>